--- a/index.html
+++ b/index.html
@@ -11,28 +11,9 @@
 <body>
     <div class="container">
         <!-- Header -->
-        <header class="header">
-            <div class="header-content">
-                <div class="logo">
-                    <i class="fas fa-chart-line"></i>
-                    <h1>MLB Betting Analytics</h1>
-                    <span class="beta">Pro</span>
-                </div>
-                <div class="header-stats">
-                    <div class="stat">
-                        <span class="stat-value" id="totalOpportunities">0</span>
-                        <span class="stat-label">Opportunities</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-value" id="highConfidence">0</span>
-                        <span class="stat-label">High Confidence</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-value" id="gamesAnalyzed">0</span>
-                        <span class="stat-label">Games Today</span>
-                    </div>
-                </div>
-            </div>
+                <header>
+            <h1>🏟️ MLB Sports Betting Analytics v2.1</h1>
+            <p>Advanced AI-Powered Analysis & Real-time Data Intelligence</p>
         </header>
 
         <!-- Control Panel -->
