--- a/index.html
+++ b/index.html
@@ -259,6 +259,10 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Phase 1 Enhanced Analytics Scripts -->
+    <script src="expert-trends.js"></script>
+    <script src="hardrock-integration.js"></script>
+    <script src="bet-tracking.js"></script>
     <script src="mlb-analytics.js"></script>
     <script src="app.js"></script>
 </body>
