✨ Enhanced confidence scoring and professional bet tracking
🎯 Confidence Scoring Calibration:
- Realistic confidence thresholds (fewer high confidence bets)
- Added probability percentages and edge calculations
- Enhanced metrics display like dimers.com
- More granular scoring system with stricter requirements

📊 Professional Bet Tracking System:
- Complete bet tracking functionality with modal interface
- Performance analytics (win rate, ROI tracking)
- CSV export capabilities
- Professional UI inspired by dimers.com
- Status tracking (pending/won/lost)
- Detailed bet information storage

🎨 Enhanced UI/UX:
- Dimers.com inspired card design
- Signal badges (High Value, Elite, Expert)
- Probability and edge display
- Professional confidence badges
- Improved mobile responsiveness

🚀 Ready for deployment with realistic confidence distribution and comprehensive bet tracking

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MLB Betting Analysis Engine - Advanced Sports Analytics</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mobile-styles.css">
+    <link rel="stylesheet" href="bet-tracker.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -577,6 +578,7 @@
     <script src="expert-trends.js"></script>
     <script src="hardrock-integration.js"></script>
     <script src="bet-tracking.js"></script>
+    <script src="bet-tracker.js"></script>
     <script src="mlb-analytics.js"></script>
     <!-- Phase 2 Mobile-First Scripts -->
     <script src="user-preferences.js"></script>
