🐛 Fix parlay tab structure and remove duplicate tab

--- a/index.html
+++ b/index.html
@@ -269,6 +269,12 @@
                 <div id="parlays" class="tab-panel">
                     <div class="section-header">
                         <h2><i class="fas fa-layer-group"></i> Enhanced Parlay Suggestions</h2>
+                        <div class="section-filters">
+                            <button class="filter-btn active" data-type="all">All</button>
+                            <button class="filter-btn" data-type="sgp">Same Game</button>
+                            <button class="filter-btn" data-type="multi">Multi-Game</button>
+                            <button class="filter-btn" data-type="hot">Hot</button>
+                        </div>
                     </div>
                     <div id="parlaysContent" class="content-grid">
                         <!-- Dynamic content -->
@@ -450,23 +456,7 @@
                     </div>
                 </div>
 
-                <!-- Parlays Tab -->
-                <div id="parlays" class="tab-pane">
-                    <div class="section">
-                        <h2><i class="fas fa-layer-group"></i> Enhanced Parlay Suggestions</h2>
-                        <div class="parlay-types">
-                            <div class="parlay-nav">
-                                <button class="parlay-btn active" data-type="all">All Parlays</button>
-                                <button class="parlay-btn" data-type="sgp">Same Game</button>
-                                <button class="parlay-btn" data-type="multi">Multi-Game</button>
-                                <button class="parlay-btn" data-type="specialty">Specialty</button>
-                            </div>
-                            <div id="parlaysList" class="parlays-container">
-                                <!-- Dynamic content -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Analytics Tab -->
 
                 <!-- Advanced Analytics Tab -->
                 <div id="advanced" class="tab-pane">
