feat: Update UI with tracked bets and improved formatting
- Add tracked bets view with filters and status badges
- Fix bet formatting issues and undefined values
- Improve layout and styling of bet cards
- Add better handling of player props and team totals
- Enhance tracking functionality with visual feedback

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
     <!-- Floating Action Button -->
     <div class="fab" id="exportFab" title="Export Results">
         <i class="fas fa-download"></i>
+        <span>Export Results</span>
     </div>
 
     <!-- Scripts -->
